Resolves: tdf#127498 Force corrected TIMEVALUE() result

Change-Id: I750a3251c3cf5e8cad4a37c7c4b646c0457f2dbe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/159389
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins